--- a/examples/bsc-testnet/package.json
+++ b/examples/bsc-testnet/package.json
@@ -10,9 +10,9 @@
     "server:hono": "tsx server/hono-server.ts"
   },
   "dependencies": {
-    "@x402-bnb/core": "workspace:*",
-    "@x402-bnb/middleware-express": "workspace:*",
-    "@x402-bnb/middleware-hono": "workspace:*",
+    "@q402/core": "workspace:*",
+    "@q402/middleware-express": "workspace:*",
+    "@q402/middleware-hono": "workspace:*",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "hono": "^4.0.0",
