--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "q402 - EIP-7702 Delegated Payment Protocol for BSC and EVM networks",
   "repository": {
     "type": "git",
-    "url": "https://github.com/quack-ai/q402.git"
+    "url": "https://github.com/OWK50GA/q402.git"
   },
   "author": "Quack AI",
   "license": "Apache-2.0",
@@ -34,5 +34,6 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a"
 }
