--- a/bnb-super-web3-agent/pnpm-workspace.yaml
+++ b/bnb-super-web3-agent/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
-# overrides:
-#   "@q402/core": "github:OWK50GA/Q402#main:packages/core"
-#   "@q402/facilitator": "github:OWK50GA/Q402#main:packages/facilitator"
-#   "@q402/middleware-express": "github:OWK50GA/Q402#main:packages/middleware-express"
-#   # "@q402/middleware-hono": "github:OWK50GA/Q402#main:packages/middleware-hono"
+overrides:
+  "@q402/core": link:../Q402/packages/core
+  "@q402/facilitator": link:../Q402/packages/facilitator
+  "@q402/middleware-express": link:../Q402/packages/middleware-express
+  "@q402/middleware-hono": link:../Q402/packages/middleware-hono
